name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base, miso, aeson, containers, ghcjs-base, servant, network-uri
  ghc-options:         -optl-fuse-ld=gold -j +RTS -A128m -n2m -RTS
  ld-options:          -fuse-ld=gold
  default-language:    Haskell2010
